# DeePFAS

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  script.py  setup.cfg  setup.py
DeePFAS/: aggregate_results.py  aggregate_results.sh  check_results_pepmass.py  download_embs.sh  download_models.sh  download_nist_pfas.sh  download_std_150.sh  download_wwtp3.sh  draw_spec.ipynb  env_set.sh  gen_latent_space.sh  match_pfascreen.py  match_wwtp3.py  match_wwtp3.sh  msdata_processing.R  peak_matching.py  repack_hdf5.py  requirements.txt  run_DeePFAS.bat  run_DeePFAS.py  run_DeePFAS.sh  test_deepfas.sh  test_faulthandler.py  test_speed.py  test_vis.ipynb  train_ae.sh  train_deepfas.sh  visualization.ipynb
DeePFAS/DeePFAS/: test_deepfas.py  train_deepfas.py
DeePFAS/ae/: gen_form_to_smiles.py  gen_latent_space.py  train_ae.py
DeePFAS/mol_dataset/: mol_database.hdf5  smiles.tsv
DeePFAS/spec_dataset/: test_spec.mgf
dataset/: randomizedsmiles.id  smiles_dataset.tsv
example/: testdata.mgf
gru_saved/: properties_model.pt
models/: eval.py  inference.py  trainer.py
models/blocks/: conv_layer.py  decoder_layer.py  encoder_layer.py
models/config/: gru_config.json  models.py  ms2conv.json
models/embedding/: positional_encode.py  transformer_embedding.py
models/layers/: multi_head_attention.py  position_wise_feed_forward.py  scale_dot_product_attention.py
models/model/: beam.py  gru_autoencoder.py  ms2embedding.py  properties_model.py  translator.py
models/utils/: bleu.py  dataloader.py  dataset.py  misc.py  sampler.py  script.py  split.py
(+43 files in other folders)
